--- a/webfrontend/.env
+++ b/webfrontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=http://localhost:5000/api
+REACT_APP_API_URL=https://livewebapplication-cqcpe8d5gjg4g8ae.eastasia-01.azurewebsites.net/api
