--- a/webfrontend/.env
+++ b/webfrontend/.env
@@ -1,1 +1,1 @@
-API_URL=https://livewebapplication-cqcpe8d5gjg4g8ae.eastasia-01.azurewebsites.net/api
+API_URL=https://livewebapplication-cqcpe8d5gjg4g8ae.eastasia-01.azurewebsites.net
